Fix spacing of content on different screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,7 +57,7 @@
 /*--------------------------------------------Homepage*/
 
 .hero img {
-    margin-top: 100px;
+    margin-top: 160px;
     margin-left: 50px;
     height:400px;
     width: 400px;
@@ -66,7 +66,7 @@
 }
 
 .base {
-    margin-top: 0;
+    margin-top: 90px;
     font-family: "roboto", sans-serif;
     color:white;
     padding-top: 60px;
@@ -215,7 +215,7 @@ h2 {
     font-size: 40px;
     font-family: "roboto", sans-serif;
     letter-spacing:1px;
-    margin-top: 40px;
+    margin-top: 150px;
     margin-bottom: 30px;
     margin-left: 400px;
 }
@@ -583,7 +583,7 @@ footer a {
         font-size: 40px;
         font-family: "roboto", sans-serif;
         letter-spacing:1px;
-        margin-top: 60px;
+        margin-top: 170px;
         margin-bottom: 30px;
         margin-left: 400px;
     }
@@ -720,10 +720,14 @@ footer a {
 /*--------------------------------------------Homepage*/
 
     .hero img {
-        margin-top: 80px;
+        margin-top: 150px;
         margin-left: 150px;
         height: 350px;
         width: 350px;
+    }
+
+    .base {
+        margin-top: 0;
     }
 
     .menu p {
@@ -793,7 +797,7 @@ footer a {
 
     .languages h1 {
         margin-left: 230px;
-        margin-top: 70px;
+        margin-top: 150px;
     }
 
     .languagefirst {
@@ -845,7 +849,7 @@ footer a {
 /*--------------------------------------------My Projects*/
 
     .projectheader {
-        margin-top: 120px;
+        margin-top: 150px;
     }
 
     .projecthero {
@@ -922,30 +926,6 @@ footer a {
 
 /*--------------------------------------------Navbar*/
 
-    .topnav {
-        overflow: hidden;
-        position: relative;
-    }
-
-    .topnav #menu {
-        display: none;
-    }
-
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 30px;
-        display: block;
-    }
-
-    .topnav a.icon {
-        display: block;
-        position: absolute;
-        right: 20px;
-        top: 20px;
-    }
-
     .main-header {
         color:white;
         font-family: "roboto", sans-serif;
@@ -983,10 +963,14 @@ footer a {
 /*--------------------------------------------Homepage*/
 
     .hero img {
-        margin-top: 40px;
+        margin-top: 90px;
         margin-left: 70px;
         height: 250px;
         width: 250px;
+    }
+
+    .base {
+        margin-top: 0;
     }
 
     .menu p {
@@ -1026,13 +1010,6 @@ footer a {
         display: inline-block;
         margin-left: 50%;
         margin-bottom: 20px;
-    }
-
-    .base {
-        margin-top: 100px;
-        font-family: "roboto", sans-serif;
-        color:white;
-        padding-top: 60px;
     }
 
     .aboutme {
@@ -1076,7 +1053,7 @@ footer a {
     }
 
     .languages h1 {
-        margin: 60px;
+        margin-top: 30px;
         font-size: 30px;
     }
 
@@ -1110,6 +1087,7 @@ footer a {
 
     div.row .languages {
         margin-left: 30px;
+        margin-top: 30px;
     }
 
     div.col .languagefirst {
@@ -1258,10 +1236,14 @@ footer a {
 /*--------------------------------------------Homepage*/
 
     .hero img {
-        margin-top: 80px;
+        margin-top: 120px;
         margin-left: 25px;
         height: 250px;
         width: 250px;
+    }
+
+    .base {
+        margin-top: 0;
     }
 
     .menu p {
@@ -1280,6 +1262,7 @@ footer a {
         border-radius: 50%;
         display: inline-block;
         margin-left: 80px;
+        margin-bottom: 30px;
     }
 
     .menuwork {
@@ -1290,6 +1273,7 @@ footer a {
         display: inline-block;
         margin-left: 80px;
         margin-top: 0;
+        margin-bottom: 30px;
     }
 
     .menucontact {
@@ -1335,7 +1319,7 @@ footer a {
     }
 
     .languages h1 {
-        margin-top: 80px;
+        margin-top: 120px;
         margin-left: 60px;
         font-size: 30px;
     }
@@ -1349,8 +1333,8 @@ footer a {
     }
 
     .myeducation, .myexperience {
-        padding-left: 15px;
         margin-top: 40px;
+        margin-left: 20px;
         width: 90%;
     }
 
@@ -1437,6 +1421,10 @@ footer a {
         letter-spacing:1px;
         margin-top: 130px;
     }	
+
+    .contactfloat {
+        margin-left: 0;
+    }
 
 /*--------------------------------------------Contact page*/
 
